--- a/public/app/views/contact.html
+++ b/public/app/views/contact.html
@@ -3,7 +3,14 @@
     <h1>Contact Page</h1>
 
     <div class="block">
-        <p>408-368-8244</p>
+        <h4>You can call me at:</h4>
+        <h4>408-368-8244</h4>
+        <br/>
+    </div>
+
+    <div class="block">
+        <h4>Or you can email me at:</h4>
+        <h4>peruman@rose-hulman.edu</h4>
     </div>
 
 </div>
