--- a/public/app/views/links.html
+++ b/public/app/views/links.html
@@ -3,7 +3,8 @@
     <h1>Links Page</h1>
 
     <div class="block">
-        <p>www.github.com/NithinPerumal</p>
+        <h4><a href="#/links" ng-click="redirectToGithub()">My Github</a></h4>
+        <h4><a href="#/links" ng-click="redirectToLinkedIn()">My LinkedIn</a></h4>
     </div>
 
 </div>
