--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Nithin Perumal</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+    <head>
+        <meta charset="UTF-8">
+        <title>Nithin Perumal</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700,800' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+        <style type="text/css">
+            body {
+                background-color: lightgrey;
+            }
+
+        </style>
+
+    </head>
 
 
-
-  </head>
   <body ng-app="mySite">
-  <div id=navigationbar>
-    <nav class="navbar navbar-dark bg-inverse">
-      <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-        <!--&#9776;-->
-      </button>
-      <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-        <a class="navbar-brand" href="#/landing">Nithin Perumal</a>
-        <ul class="nav navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#/home">About <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#/links">Links</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#/contact">Contact</a>
-          </li>
-        </ul>
-        <!--<form class="form-inline pull-xs-right">-->
-          <!--<input class="form-control" type="text" placeholder="Search">-->
-          <!--<button class="btn btn-success-outline" type="submit">Search</button>-->
-        <!--</form>-->
-      </div>
-    </nav>
-  </div>
+        <div id=navigationbar>
+            <nav class="navbar navbar-dark bg-inverse">
+                <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+                <!--&#9776;-->
+                 </button>
+                <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+                    <a class="navbar-brand" href="#/landing">Nithin Perumal</a>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#/home">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#/links">Links</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#/contact">Contact</a>
+                    </li>
+                </ul>
+                <!--<form class="form-inline pull-xs-right">-->
+                  <!--<input class="form-control" type="text" placeholder="Search">-->
+                  <!--<button class="btn btn-success-outline" type="submit">Search</button>-->
+                <!--</form>-->
+                </div>
+            </nav>
+    </div>
 
   <div data-ng-view>
 
